--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ requirements:
     - pyopenssl >=22.1,<22.2
     - pyparsing >=2.4.2,<3.1
     - pyperclip >=1.6.0,<1.9
-    - python >=3.9
+    - python
     - ruamel.yaml >=0.16,<0.18
     - sortedcontainers >=2.3,<2.5
     - tornado >=6.1,<7
