--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,61 +1,91 @@
-{% set name = "mitmproxy" %}
-{% set version = "9.0.1" %}
+{% set version = "10.1.0" %}
+{% set aioquic_mitmproxy_version = "0.9.20.3" %}
+{% set urwid_mitmproxy_version = "2.1.2.1" %}
+{% set mitmproxy_rs_version = "0.3.7" %}
 
 package:
-  name: {{ name|lower }}
+  name: mitmproxy
   version: {{ version }}
 
 source:
-  url: https://github.com/mitmproxy/mitmproxy/archive/{{ version }}.tar.gz
-  sha256: 2acd2c16e5bc02cd1dab8c58003254a71a2ee0ec0366001f624f85c980a2b43a
+  - url: https://github.com/mitmproxy/mitmproxy/archive/{{ version }}.tar.gz
+    sha256: b243509a55aedf54badefc5d1f49450c37fb254f95e6891c53c1e5782147bcf9
+    folder: mitmproxy
+  - url: https://github.com/meitinger/aioquic_mitmproxy/archive/{{ aioquic_mitmproxy_version }}.tar.gz
+    sha256: 63902a08fcc2a5e89f0faa3b4f918db30b45d1a613941530a7342e747c9f5df3
+    folder: aioquic_mitmproxy
+  - url: https://github.com/mitmproxy/urwid-mitmproxy/archive/{{ urwid_mitmproxy_version }}.tar.gz
+    sha256: e13544f6f6deb5d276696760ec022d656a95415e70e06c77c452461e5f062675
+    folder: urwid-mitmproxy
+  - url: https://github.com/mitmproxy/mitmproxy_rs/archive/{{ mitmproxy_rs_version }}.tar.gz
+    sha256: faf4ff0a1f03fa4f732f27a658d386d7623573aa4f70c968856b862270eecbf5
+    folder: mitmproxy-rs
 
 build:
+  number: 0
+  skip: true  # [py<310]
+  script:
+    {% set _pip_cmd = PYTHON + " -m pip install -vv --no-deps --no-build-isolation" %}
+    - {{ _pip_cmd }} ./aioquic_mitmproxy
+    - {{ _pip_cmd }} ./urwid-mitmproxy
+    - {{ _pip_cmd }} ./mitmproxy-rs/mitmproxy-macos    # [osx]
+    - {{ _pip_cmd }} ./mitmproxy-rs/mitmproxy-windows  # [win]
+    - {{ _pip_cmd }} ./mitmproxy-rs/mitmproxy-rs
+    - {{ _pip_cmd }} ./mitmproxy
   entry_points:
     - mitmproxy = mitmproxy.tools.main:mitmproxy
     - mitmdump = mitmproxy.tools.main:mitmdump
     - mitmweb = mitmproxy.tools.main:mitmweb
-  script: {{ PYTHON }} -m pip install . -vv
-  number: 1
-  skip: true  # [py<39]
 
 requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - {{ compiler('rust') }}
+    - {{ compiler('c') }}                    # [unix]
+    - python >=3.10
+    - pip
+    - maturin>=1.2.3,<2                      # [build_platform != target_platform]
+    - hatchling                              # [build_platform != target_platform]
+    - cargo-bundle-licenses
   host:
     - pip
     - python
+    - hatchling
+    - python >=3.10
+    - maturin>=1.2.3,<2
   run:
-    - asgiref >=3.2.10,<3.6
+    - asgiref >=3.2.10,<3.8
     - brotli-python >=1.0,<1.1
     - certifi >=2019.9.11
-    - cryptography >=38,<38.1
-    - flask >=1.1.1,<2.3
+    - cryptography >=38,<41.1
+    - flask >=1.1.1,<2.4
     - h11 >=0.11,<0.15
     - h2 >=4.1,<5
     - hyperframe >=6.0,<7
     - kaitaistruct >=0.10,<0.11
     - ldap3 >=2.8,<2.10
-    - mitmproxy_wireguard >=0.1.6,<0.2
     - msgpack-python >=1.0.0,<1.1.0
     - passlib >=1.6.5,<1.8
     - protobuf >=3.14,<5
     - publicsuffix2 >=2.20190812,<3
     - pydivert >=2.0.3,<2.2          # [win]
-    - pyopenssl >=22.1,<22.2
-    - pyparsing >=2.4.2,<3.1
+    - pyopenssl >=22.1,<23.2
+    - pyparsing >=2.4.2,<3.2
     - pyperclip >=1.6.0,<1.9
     - python
     - ruamel.yaml >=0.16,<0.18
     - sortedcontainers >=2.3,<2.5
-    - tornado >=6.1,<7
-    - typing-extensions >=4.3,<4.5
-    - urwid >=2.1.1,<2.2
+    - tornado >=6.2,<7
+    - typing-extensions >=4.3,<4.5   # [py<311]
     - wsproto >=1.0,<1.3
-    - zstandard >=0.11,<0.20
+    - zstandard >=0.11,<0.22
 
 test:
   imports:
+    - mitmproxy_rs
+    - mitmproxy_windows  # [win]
+    - mitmproxy_macos    # [osx]
     - mitmproxy
   commands:
     - pip check
@@ -68,11 +98,15 @@ test:
 about:
   home: http://mitmproxy.org
   summary: An interactive TLS-capable intercepting HTTP proxy for penetration testers and software developers.
-  license: MIT AND BSD-3-Clause
+  license: >-
+    MIT AND BSD-3-Clause AND LGPL-2.0
+    AND (LGPL-3.0 OR GPL-2.0)  # [win]
   license_file:
-    - LICENSE
-    - mitmproxy/tools/web/static/images/chrome-devtools/LICENSE
-    - web/src/images/chrome-devtools/LICENSE
+    - mitmproxy/LICENSE
+    - aioquic_mitmproxy/LICENSE
+    - urwid-mitmproxy/COPYING
+    - mitmproxy-rs/LICENSE
+    - mitmproxy-rs/mitmproxy-windows/mitmproxy_windows/LICENSE  # [win]
 
 extra:
   recipe-maintainers:
