--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,6 +70,7 @@ requirements:
     - protobuf >=3.14,<5
     - publicsuffix2 >=2.20190812,<3
     - pydivert >=2.0.3,<2.2          # [win]
+    - pylsqpack >=0.3.3,<0.4.0       # for aioquic_mitmproxy
     - pyopenssl >=22.1,<23.2
     - pyparsing >=2.4.2,<3.2
     - pyperclip >=1.6.0,<1.9
