--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,7 @@ requirements:
     - {{ compiler('c') }}                    # [unix]
     - python >=3.10
     - pip
-    - maturin>=1.2.3,<2                      # [build_platform != target_platform]
+    - maturin >=1.2.3,<2                      # [build_platform != target_platform]
     - hatchling                              # [build_platform != target_platform]
     - cargo-bundle-licenses
   host:
@@ -53,7 +53,7 @@ requirements:
     - python
     - hatchling
     - python >=3.10
-    - maturin>=1.2.3,<2
+    - maturin >=1.2.3,<2
   run:
     - asgiref >=3.2.10,<3.8
     - brotli-python >=1.0,<1.1
@@ -100,8 +100,8 @@ about:
   home: http://mitmproxy.org
   summary: An interactive TLS-capable intercepting HTTP proxy for penetration testers and software developers.
   license: >-
-    MIT AND BSD-3-Clause AND LGPL-2.0
-    AND (LGPL-3.0 OR GPL-2.0)  # [win]
+    MIT AND BSD-3-Clause AND LGPL-2.0-only
+    AND (LGPL-3.0-only OR GPL-2.0-only)  # [win]
   license_file:
     - mitmproxy/LICENSE
     - aioquic_mitmproxy/LICENSE
