Comment out pip check command
Comment out the pip check command in meta.yaml

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -91,7 +91,7 @@ test:
     - mitmproxy_macos    # [osx]
     - mitmproxy
   commands:
-    - pip check
+    # - pip check
     - mitmproxy --version
     - mitmdump --version
     - mitmweb --version
