--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,8 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('rust') }}
     - {{ compiler('c') }}                    # [unix]
-    - python >=3.10
+    - {{ stdlib("c") }}
+    - python
     - pip
     - maturin >=1.2.3,<2                      # [build_platform != target_platform]
     - hatchling                              # [build_platform != target_platform]
@@ -51,7 +52,7 @@ requirements:
     - pip
     - python
     - hatchling
-    - python >=3.10
+    - python
     - maturin >=1.2.3,<2
   run:
     - asgiref >=3.2.10,<3.8
