--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('rust') }}
     - {{ compiler('c') }}                    # [unix]
-    - {{ stdlib("c") }}
+    - {{ stdlib("c") }}                      # [unix]
     - python
     - pip
     - maturin >=1.2.3,<2                      # [build_platform != target_platform]
