--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,18 +40,20 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - python >=3.10                          # [build_platform != target_platform]
+    - pip <24                                # [build_platform != target_platform]
+    - maturin >=1.2.3,<2                     # [build_platform != target_platform]
+    - hatchling ==1.18.0                     # [build_platform != target_platform]
+    - setuptools <69                         # [build_platform != target_platform]
     - {{ compiler('rust') }}
     - {{ compiler('c') }}                    # [unix]
     - {{ stdlib("c") }}                      # [unix]
-    - python >=3.10
-    - pip <24
-    - maturin >=1.2.3,<2                     # [build_platform != target_platform]
-    - hatchling                              # [build_platform != target_platform]
     - cargo-bundle-licenses
   host:
     - pip <24
     - python
-    - hatchling
+    - python >=3.10
+    - hatchling ==1.18.0
     - maturin >=1.2.3,<2
     - setuptools <69
   run:
