--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,7 @@
 build_platform:
   osx_arm64: osx_64
+bot:
+  inspection: update-grayskull
 conda_build:
   pkg_format: '2'
 conda_forge_output_validation: true
