--- a/.ci_support/linux_64_python3.12.____cpython.yaml
+++ b/.ci_support/linux_64_python3.12.____cpython.yaml
@@ -1,11 +1,3 @@
-c_compiler:
-- gcc
-c_compiler_version:
-- '14'
-c_stdlib:
-- sysroot
-c_stdlib_version:
-- '2.17'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -18,7 +10,5 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - 3.12.* *_cpython
-rust_compiler:
-- rust
-target_platform:
-- linux-64
+python_min:
+- '3.10'
