--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,6 @@
-build_platform:
-  osx_arm64: osx_64
+noarch_platforms:
+  - linux_64
+  - win_64
 bot:
   inspection: update-grayskull
 conda_build:
