--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -63,9 +63,11 @@ tests:
   - python:
       imports:
         - mitmproxy
+      python_version: ${{ python_min }}.*
   - requirements:
       run:
         - pip
+        - python ${{ python_min }}.*
     script:
       - mitmproxy --version
       - mitmdump --version
