--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -17,6 +17,11 @@ build:
   noarch: python
   script:
     - ${{ PYTHON }} -m pip install -vv --no-deps --no-build-isolation .
+  python:
+    entry_points:
+      - mitmproxy = mitmproxy.tools.main:mitmproxy
+      - mitmdump = mitmproxy.tools.main:mitmdump
+      - mitmweb = mitmproxy.tools.main:mitmweb
 
 requirements:
   host:
